[tool.poetry]
name = "python-tools"
version = "0.1.0"
description = "The hypermodern Python project"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/whately/python-tools"
repository = "https://github.com/whately/python-tools"
keywords = ["hypermodern", "python-tools"]
authors = ["whately <whately@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
